添加瀑布流相关内容

--- a/ToolsApp/ToolsApp/功能合集/开屏广告/Source/LaunchAdData.json
+++ b/ToolsApp/ToolsApp/功能合集/开屏广告/Source/LaunchAdData.json
@@ -3,7 +3,7 @@
     "msg": "success",
     "data": [{
                  "fileType": "0",
-                 "fileUrl": "http://p1.bqimg.com/567571/23a4bc7a285c1179.gif",
+                 "fileUrl": "http://c.hiphotos.baidu.com/image/pic/item/d62a6059252dd42a6a943c180b3b5bb5c8eab8e7.jpg",
                  "openUrl": "http://www.baidu.com",
                  "contentSize": "1242*1786",
                  "showTime": 5
