--- a/ToolsApp/Podfile
+++ b/ToolsApp/Podfile
@@ -5,4 +5,5 @@ target 'ToolsApp' do
   pod 'SDWebImage'
   pod 'MJExtension'
   pod 'XHLaunchAd' #开屏广告三方库，地址：https://github.com/CoderZhuXH/XHLaunchAd
+  pod 'FMDB'
 end
