重定向和Hook的方式实现日志存储本地

--- a/ToolsApp/Podfile
+++ b/ToolsApp/Podfile
@@ -7,4 +7,6 @@ target 'ToolsApp' do
   pod 'XHLaunchAd' #开屏广告三方库，地址：https://github.com/CoderZhuXH/XHLaunchAd
   pod 'FMDB'
   pod 'Masonry'
+  pod 'ZipArchive'
+  pod 'fishhook'
 end
