--- a/ToolsApp/ToolsApp/Supporting Files/Info.plist
+++ b/ToolsApp/ToolsApp/Supporting Files/Info.plist
@@ -66,6 +66,8 @@
     <string></string>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string></string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>App需要您的同意,才能访问相册</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
